--- a/templates/movies/movieEditTemplate.html
+++ b/templates/movies/movieEditTemplate.html
@@ -48,6 +48,12 @@
     </form>
 </div>
 <div class="col-lg-6 movie-actor-list">
+    <button type="button" class="btn btn-primary btn-sm show-actor-to-movie pull-right">
+        <span class="glyphicon glyphicon-plus"></span>Add
+    </button>
+    <button type="button" class="btn btn-primary btn-sm close-actor-to-movie pull-right" style="display:none">
+        <span class="glyphicon glyphicon-close"></span>Back
+    </button>
 </div>
 <div class="col-lg-6 movie-toadd-actor-list" style="display:none">
 </div> 
