--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,3 @@
 @import url('http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css'); 
+@import url('star-rating.min.css');
 @import url('style.css');
