--- a/templates/movies/movieDetailTemplate.html
+++ b/templates/movies/movieDetailTemplate.html
@@ -27,15 +27,15 @@
             </div>
         </div>
         <div class="form-group">
-            <label for="rating" class="col-sm-2 control-label">Rating</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" name="rating" value="<%= data.get('rating') %>" disabled="true"/>
-            </div>
-        </div>
-        <div class="form-group">
             <label for="genere" class="col-sm-2 control-label">Genere</label>
             <div class="col-sm-10">
                 <input type="text" class="form-control" name="genere" value="<%= data.get('genere') %>" disabled="true"/>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="rating" class="col-sm-2 control-label">Rating</label>
+            <div class="col-sm-10">
+                <input class="rating form-control" data-show-clear=false data-show-caption=false data-size="xs" data-min="0" data-max="5" data-step="1" data-stars=5 value="<%= data.get('rating') %>">
             </div>
         </div>
         <input type="hidden" name="cid" value="<%= data.cid %>" />
