--- a/css/style.css
+++ b/css/style.css
@@ -1,38 +1,32 @@
-.divider{
-  width: 100%;
-  border-top: 1px solid gray;
+.divider {
+    width: 100%;
+    border-top: 1px solid gray;
 }
-
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
+    padding-top: 70px;
+    /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
     padding-bottom: 80px;
 }
-
 .thumb {
     margin-bottom: 30px;
 }
-
-.footer{
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  background-color: #f5f5f5;
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    background-color: #f5f5f5;
 }
-
 .footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
+    padding-right: 15px;
+    padding-left: 15px;
 }
-
 .container .text-muted {
-  margin: 20px 0;
+    margin: 20px 0;
 }
-
 .rating-xs {
-  font-size: 1.3em;
+    font-size: 1.3em;
 }
-
 .capitalize {
-  text-transform:capitalize;
+    text-transform: capitalize;
 }
