--- a/templates/movies/moviesThumbailsTemplate.html
+++ b/templates/movies/moviesThumbailsTemplate.html
@@ -1,11 +1,15 @@
 <header>
-  <h1>Recent Movies</h1>
 </header>
+<% if (data.length == 0) { %>
+    <div class="col-lg-12 col-md-12 col-xs-12">
+    	<p style="font-size:2em">:( Please, <a href="#/movies/new">add</a> some movie</p>
+    </div>
+<% }; %>
 <% _.each(data, function(item) { %>
     <div class="col-lg-3 col-md-4 col-xs-6 thumb">
             <a class="thumbnail" href="#/movies/detail/<%= item.id %>">
                 <img class="img-responsive" src="http://placehold.it/400x300" alt="">
             </a>
-            <p><%= item.get('name')%></p>
+            <p style="text-align:center"><strong><%= item.get('name')%></strong></p>
     </div>
 <% }); %>
