--- a/templates/movies/movieEditTemplate.html
+++ b/templates/movies/movieEditTemplate.html
@@ -38,6 +38,17 @@
                 <input type="text" class="form-control" name="genere" value="<%= data.get('genere') %>" />
             </div>
         </div>
+
+        <div class="form-group">
+            <label for="image" class="col-sm-2 control-label">image</label>
+            <div class="col-sm-10">
+                <input type="file" class="form-control" id="files" name="files[]" multiple />
+            </div>
+        </div>
+        <output id="list"></output>
+
+
+
         <input type="submit" class="btn" value="<%= data.get('name') ? 'Update' : 'Create' %>" />
         <% if (data.get('name')) { %>
           
