--- a/templates/actors/actorEditTemplate.html
+++ b/templates/actors/actorEditTemplate.html
@@ -26,6 +26,17 @@
                 <input type="text" class="form-control" name="birthDate" value="<%= data.get('birthDate') %>" />
             </div>
         </div>
+        <div class="form-group">
+            <label for="image" class="col-sm-2 control-label">image</label>
+            <div class="col-sm-10">
+                <input type="file" class="form-control" id="files" name="files[]" multiple />
+            </div>
+        </div>
+        <div class="col-lg-10 col-md-10 col-xs-10 thumb">
+                <span id="store-image" class="thumbnail">
+                    <img class="img-responsive" src="<%= data.get('image') ? data.get('image') : 'http://placehold.it/400x300' %>" alt="">
+                </span>
+        </div>
         <input type="submit" class="btn" value="<%= data.get('firstName') ? 'Update' : 'Create' %>" />
         <% if (data.get('firstName')) { %>
           
